Add STDOUT_APPEND & STDERR_APPEND for both external execs & builtins